# media_organizer

./: readme.md
fs_metadata/src/: functions_metadata.rs  struct_metadata.rs
media_info/: Cargo.toml
media_info/src/: audio_info.rs  lib.rs  photo_info.rs  video_info.rs
media_info/src/audio_info/: audio_util.rs  mod.rs  struct_audio_info.rs
media_info/src/photo_info/: mod.rs
media_info/src/video_info/: mod.rs  struct_video_info.rs
media_organizer/: Cargo.toml  readme.md
media_organizer/src/: main.rs
media_organizer/src/organizer/: handle_media.rs
media_organizer/src/organizer/make_file_destination/: make_dir_str.rs  mod.rs
